test/libyul/yulSyntaxTests/invalid/jump_disallowed.yul
{
    jump(2)
}
// ----
// TypeError 5017: (6-10): The identifier "jump" is reserved and can not be used.
